@@ -1,3 +1,13 @@
+2006-01-22  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* configure.in (--enable-std-string): New option.
+
+	* flower/std-string.cc: 
+	* flower/include/std-string.hh: New file.
+
+	* flower/file-name.cc[STD_STRING]:
+	* flower/include/file-name.hh[STD_STRING]: Use it.
+
 2006-01-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/define-markup-commands.scm (with-dimensions):
